Fix button spacing

--- a/widget/base.scss
+++ b/widget/base.scss
@@ -58,7 +58,7 @@ a {
     background-color: inherit;
     border: 1px solid #ddd;
     border-width: 0px 0px 1px 0px;
-    padding: $spacing / 1.5 $spacing / 2 $spacing / 2 $spacing / 2  ;
+    padding: $spacing / 1.5 0 $spacing / 2 0  ;
     text-align: left;
 
     &:hover {
